[gd_scene load_steps=41 format=2]

[ext_resource path="res://Data/Fonts/fontTimes.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Materials/matUIText.tres" type="Material" id=2]
[ext_resource path="res://Shaders/Screen/shrUI.shader" type="Shader" id=3]
[ext_resource path="res://Data/Fonts/fontRobotoLightItalic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Sprites/Extras/Behind the scenes/debug room.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Extras/Behind the scenes/concept art 1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Extras/Behind the scenes/first notes.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Extras/Behind the scenes/first prototype.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Extras/Behind the scenes/map inside editor.png" type="Texture" id=9]
[ext_resource path="res://Data/Fonts/fontRobotoLight.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Data/Fonts/fontRobotoMedium.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Sprites/Extras/Behind the scenes/more shader tests.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Extras/Behind the scenes/old button layout.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Extras/Behind the scenes/testing more of aesthetic.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Extras/Behind the scenes/original story, the game was completly rewritten mid-development.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Extras/Behind the scenes/testing aesthetics.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Extras/Behind the scenes/unused dialogue.png" type="Texture" id=17]
[ext_resource path="res://Scripts/scrExtras.gd" type="Script" id=18]
[ext_resource path="res://Materials/matUIText2.tres" type="Material" id=19]
[ext_resource path="res://Sprites/Extras/Developer Commentary/sprHeader.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Extras/Developer Commentary/sprEnd.png" type="Texture" id=21]
[ext_resource path="res://Sprites/UI/sprLock.png" type="Texture" id=23]

[sub_resource type="DynamicFont" id=1]
size = 18
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/modular = Color( 1, 1, 1, 1 )
shader_param/blur_amount = 0.0
shader_param/grain_strenth = 0.8

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 20 )

[sub_resource type="DynamicFont" id=11]
size = 13
use_filter = true
extra_spacing_top = -6
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 90, 20 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 90, 20 )

[sub_resource type="DynamicFont" id=4]
size = 18
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=5]
size = 15
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=6]
size = 14
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=10]
shader = ExtResource( 3 )
shader_param/modular = Color( 0.862745, 0.862745, 0.862745, 1 )
shader_param/blur_amount = 0.004
shader_param/grain_strenth = 0.424

[sub_resource type="DynamicFont" id=9]
size = 14
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.0472973, 0.925676, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="ShaderMaterial" id=16]
shader = ExtResource( 3 )
shader_param/modular = Color( 1, 1, 1, 0.129412 )
shader_param/blur_amount = 0.01
shader_param/grain_strenth = 0.7

[sub_resource type="ShaderMaterial" id=15]
shader = ExtResource( 3 )
shader_param/modular = Color( 0.52549, 0.52549, 0.52549, 1 )
shader_param/blur_amount = 0.001
shader_param/grain_strenth = 2.0

[sub_resource type="DynamicFont" id=14]
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 83, 20 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 83, 20 )

[node name="scnExtras" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nHeader" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="txtTitle" type="Label" parent="nHeader"]
material = ExtResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "&menu9"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtBack" type="Label" parent="nHeader"]
material = SubResource( 2 )
anchor_bottom = 1.0
margin_right = 38.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "<"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnBack" type="TouchScreenButton" parent="nHeader/txtBack"]
shape = SubResource( 3 )

[node name="nBottom" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -39.9341
margin_bottom = 0.065918
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="txtBTS" type="Label" parent="nBottom"]
material = ExtResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -180.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 11 )
text = "&extra1"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnBTS" type="TouchScreenButton" parent="nBottom/txtBTS"]
shape = SubResource( 12 )

[node name="txtDevC" type="Label" parent="nBottom"]
material = ExtResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 180.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 11 )
text = "&extra2"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnDevC" type="TouchScreenButton" parent="nBottom/txtDevC"]
shape = SubResource( 13 )

[node name="scBTS" type="ScrollContainer" parent="."]
visible = false
anchor_top = 0.064
anchor_right = 1.0
anchor_bottom = 0.937
margin_top = 0.0399971
margin_right = -1.0
margin_bottom = 0.319946
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BTS" type="VBoxContainer" parent="scBTS"]
margin_right = 340.0
margin_bottom = 4002.0
custom_constants/separation = 60
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtTitle" type="Label" parent="scBTS/BTS"]
material = ExtResource( 2 )
margin_right = 340.0
margin_bottom = 22.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 340, 0 )
custom_fonts/font = SubResource( 4 )
text = "&extra1"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtSubTitle" type="Label" parent="scBTS/BTS/txtTitle"]
material = ExtResource( 2 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 24.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 5 )
text = "&BTS1"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spr1" type="TextureRect" parent="scBTS/BTS"]
margin_top = 82.0
margin_right = 340.0
margin_bottom = 419.0
rect_min_size = Vector2( 299, 337 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtInfo" type="Label" parent="scBTS/BTS/spr1"]
material = ExtResource( 19 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_right = 346.0
margin_bottom = 40.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 340, 0 )
custom_fonts/font = SubResource( 6 )
text = "&BTS2"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spr2" type="TextureRect" parent="scBTS/BTS"]
margin_top = 479.0
margin_right = 340.0
margin_bottom = 885.0
rect_min_size = Vector2( 256, 406 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtInfo" type="Label" parent="scBTS/BTS/spr2"]
material = ExtResource( 19 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = 347.0
margin_bottom = 40.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 340, 0 )
custom_fonts/font = SubResource( 6 )
text = "&BTS3"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spr3" type="TextureRect" parent="scBTS/BTS"]
margin_top = 945.0
margin_right = 340.0
margin_bottom = 1160.0
rect_min_size = Vector2( 313, 215 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtInfo" type="Label" parent="scBTS/BTS/spr3"]
material = ExtResource( 19 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_right = 359.0
margin_bottom = 40.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 360, 0 )
custom_fonts/font = SubResource( 6 )
text = "&BTS4"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spr4" type="TextureRect" parent="scBTS/BTS"]
margin_top = 1220.0
margin_right = 340.0
margin_bottom = 1435.0
rect_min_size = Vector2( 313, 215 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtInfo" type="Label" parent="scBTS/BTS/spr4"]
material = ExtResource( 19 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -6.0
margin_right = 347.0
margin_bottom = 34.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 340, 0 )
custom_fonts/font = SubResource( 6 )
text = "&BTS5"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spr5" type="TextureRect" parent="scBTS/BTS"]
margin_top = 1495.0
margin_right = 340.0
margin_bottom = 1685.0
rect_min_size = Vector2( 325, 190 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtInfo" type="Label" parent="scBTS/BTS/spr5"]
material = ExtResource( 19 )
anchor_top = 0.989474
anchor_bottom = 0.989474
margin_left = -1.0
margin_top = 6.0
margin_right = 347.0
margin_bottom = 46.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 340, 0 )
custom_fonts/font = SubResource( 6 )
text = "&BTS6"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="spr6" type="TextureRect" parent="scBTS/BTS"]
margin_top = 1745.0
margin_right = 340.0
margin_bottom = 2055.0
rect_min_size = Vector2( 325, 310 )
texture = ExtResource( 12 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtInfo" type="Label" parent="scBTS/BTS/spr6"]
material = ExtResource( 19 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -33.0
margin_right = 347.0
margin_bottom = 7.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 340, 0 )
custom_fonts/font = SubResource( 6 )
text = "&BTS7"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spr7" type="TextureRect" parent="scBTS/BTS"]
margin_top = 2115.0
margin_right = 340.0
margin_bottom = 2595.0
rect_min_size = Vector2( 325, 480 )
texture = ExtResource( 13 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtInfo" type="Label" parent="scBTS/BTS/spr7"]
material = ExtResource( 19 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_right = 347.0
margin_bottom = 40.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 340, 0 )
custom_fonts/font = SubResource( 6 )
text = "&BTS8"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spr8" type="TextureRect" parent="scBTS/BTS"]
margin_top = 2655.0
margin_right = 340.0
margin_bottom = 3055.0
rect_min_size = Vector2( 325, 400 )
texture = ExtResource( 15 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtInfo" type="Label" parent="scBTS/BTS/spr8"]
material = ExtResource( 19 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -13.0
margin_right = 335.0
margin_bottom = 40.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 340, 0 )
custom_fonts/font = SubResource( 6 )
text = "&BTS9"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spr9" type="TextureRect" parent="scBTS/BTS"]
margin_top = 3115.0
margin_right = 340.0
margin_bottom = 3345.0
rect_min_size = Vector2( 325, 230 )
texture = ExtResource( 16 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtInfo" type="Label" parent="scBTS/BTS/spr9"]
material = ExtResource( 19 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -35.0
margin_right = 348.0
margin_bottom = 5.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 340, 0 )
custom_fonts/font = SubResource( 6 )
text = "&BTS10"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spr10" type="TextureRect" parent="scBTS/BTS"]
margin_top = 3405.0
margin_right = 340.0
margin_bottom = 3635.0
rect_min_size = Vector2( 325, 230 )
texture = ExtResource( 14 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtInfo" type="Label" parent="scBTS/BTS/spr10"]
material = ExtResource( 19 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -15.408
margin_right = 348.0
margin_bottom = 24.592
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 340, 0 )
custom_fonts/font = SubResource( 6 )
text = "&BTS11"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spr11" type="TextureRect" parent="scBTS/BTS"]
margin_top = 3695.0
margin_right = 340.0
margin_bottom = 3925.0
rect_min_size = Vector2( 325, 230 )
texture = ExtResource( 17 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtInfo" type="Label" parent="scBTS/BTS/spr11"]
material = ExtResource( 19 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -27.0
margin_right = 348.0
margin_bottom = 13.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 340, 0 )
custom_fonts/font = SubResource( 6 )
text = "&BTS12"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="br" type="Label" parent="scBTS/BTS"]
material = ExtResource( 2 )
margin_top = 3985.0
margin_right = 340.0
margin_bottom = 4002.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 6 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scDevC" type="ScrollContainer" parent="."]
visible = false
anchor_top = 0.064
anchor_right = 1.0
anchor_bottom = 0.937
margin_left = 2.0
margin_top = 0.0399971
margin_right = 1.0
margin_bottom = 0.319946
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DevC" type="VBoxContainer" parent="scDevC"]
margin_right = 340.0
margin_bottom = 678.0
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtTitle" type="Label" parent="scDevC/DevC"]
material = ExtResource( 2 )
margin_right = 340.0
margin_bottom = 22.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 340, 0 )
custom_fonts/font = SubResource( 4 )
text = "&extra2"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtSubTitle" type="Label" parent="scDevC/DevC/txtTitle"]
material = ExtResource( 2 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 24.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 5 )
text = "&DevC0"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="br" type="Label" parent="scDevC/DevC"]
material = ExtResource( 2 )
margin_top = 37.0
margin_right = 340.0
margin_bottom = 54.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 6 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sprHeader" type="TextureRect" parent="scDevC/DevC"]
material = SubResource( 10 )
margin_top = 69.0
margin_right = 340.0
margin_bottom = 319.769
rect_min_size = Vector2( 298.462, 250.769 )
texture = ExtResource( 20 )
expand = true

[node name="txtComentary" type="Label" parent="scDevC/DevC"]
material = ExtResource( 19 )
margin_top = 334.0
margin_right = 340.0
margin_bottom = 351.0
custom_fonts/font = SubResource( 9 )
text = "&DevC"
autowrap = true
uppercase = true

[node name="br2" type="Label" parent="scDevC/DevC"]
material = ExtResource( 2 )
margin_top = 366.0
margin_right = 340.0
margin_bottom = 383.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 6 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sprEnd" type="TextureRect" parent="scDevC/DevC"]
margin_top = 398.0
margin_right = 340.0
margin_bottom = 678.0
rect_min_size = Vector2( 298.462, 280 )
texture = ExtResource( 21 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clMagrin" type="TextureRect" parent="."]
anchor_right = 0.997
anchor_bottom = 1.0
margin_left = 359.0
margin_top = 40.0
margin_right = 560.08
margin_bottom = -241.0
rect_rotation = 89.9999
mouse_filter = 2
texture = SubResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blocked" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="Blocked"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="sprLocked" type="TextureRect" parent="Blocked"]
material = SubResource( 16 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -129.0
margin_top = -129.0
margin_right = 129.0
margin_bottom = 129.0
texture = ExtResource( 23 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtTitle" type="Label" parent="Blocked"]
material = ExtResource( 2 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -180.0
margin_top = 152.705
margin_right = 180.0
margin_bottom = 180.705
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "&extra4"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtInfo" type="Label" parent="Blocked"]
material = SubResource( 15 )
anchor_left = 0.501
anchor_top = 0.5
anchor_right = 0.501
anchor_bottom = 0.5
margin_left = -168.86
margin_top = -33.5825
margin_right = 169.14
margin_bottom = 66.4175
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 14 )
text = "&extra5"
align = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtBack" type="Label" parent="Blocked"]
material = SubResource( 15 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -168.0
margin_top = -181.735
margin_bottom = -142.735
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 14 )
text = "&extra7"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnBack" type="TouchScreenButton" parent="Blocked/txtBack"]
shape = SubResource( 17 )

[node name="txtUnlock" type="Label" parent="Blocked"]
material = SubResource( 15 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = -181.735
margin_right = 168.0
margin_bottom = -142.735
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 14 )
text = "&extra6"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnUnlock" type="TouchScreenButton" parent="Blocked/txtUnlock"]
shape = SubResource( 18 )

[connection signal="released" from="nHeader/txtBack/btnBack" to="." method="_on_btnBack_released"]
[connection signal="released" from="nBottom/txtBTS/btnBTS" to="." method="_on_btnBTS_released"]
[connection signal="released" from="nBottom/txtDevC/btnDevC" to="." method="_on_btnDevC_released"]
[connection signal="released" from="Blocked/txtBack/btnBack" to="." method="_on_btnBack_released"]
[connection signal="released" from="Blocked/txtUnlock/btnUnlock" to="." method="_on_btnUnlock_released"]
